Tests/Bad/undefined_func.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
endlocals
beginbody
	n := fibonacci(n);
 	n := n + 1;
 	write n;
 endbody
